Bug 1905646 - Don't trigger src="" load sync if there's no current request. r=smaug

Seems to match what other browsers do. Other browsers seem to fire
events at random some of the time tho, fun stuff as usual.

Differential Revision: https://phabricator.services.mozilla.com/D218603